# ratatui_ruby

./: .build.yml  .gitignore  .pre-commit-config.yaml  .rubocop.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Gemfile  LICENSE  README.md  REUSE.toml  Rakefile  mise.toml  ratatui_ruby.gemspec
.builds/: ruby-3.2.yml  ruby-3.3.yml  ruby-3.4.yml  ruby-4.0.0-preview3.yml  ruby-4.0.0.yml
doc/: application_architecture.md  application_testing.md  async.md  custom.css  debugging.md  event_handling.md  index.md  interactive_design.md  performance.md  quickstart.md  terminal_limitations.md  v0.7.0_migration.md  why.md
docs/: application_testing.md  cli.md  index.md  quickstart.md
examples/: all_events.rb  analytics.rb  block_padding.rb  block_titles.rb  box_demo.rb  calendar_demo.rb  cell_demo.rb  chart_demo.rb  custom_widget.rb  dashboard.rb  flex_layout.rb  hello_world.rb  hit_test.rb  line_gauge_demo.rb  list_styles.rb  login_form.rb  map_demo.rb  mouse_events.rb  popup_demo.rb  quickstart_dsl.rb  (+30 more)
ext/ratatui_ruby/: .gitignore  Cargo.toml  clippy.toml  extconf.rb
ext/ratatui_ruby/.cargo/: config.toml
ext/ratatui_ruby/src/: buffer.rs  events.rs  frame.rs  lib.rs  rendering.rs  string_width.rs  style.rs  terminal.rs  text.rs
ext/ratatui_ruby/src/widgets/: barchart.rs  block.rs  calendar.rs  canvas.rs  center.rs  chart.rs  clear.rs  cursor.rs  gauge.rs  layout.rs  line_gauge.rs  linechart.rs  list.rs  list_state.rs  mod.rs  overlay.rs  paragraph.rs  ratatui_logo.rs  ratatui_mascot.rs  scrollbar.rs  scrollbar_state.rs  sparkline.rs  table.rs  table_state.rs  tabs.rs
(+1242 files in other folders)
