# SPDX-FileCopyrightText: 2025 Kerrick Long <me@kerricklong.com>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ratatui_ruby"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8.2"
ratatui = { version = "0.29", features = ["widget-calendar"] }

lazy_static = "1.4"
time = { version = "0.3", features = ["macros"] }
