# SPDX-FileCopyrightText: 2025 Kerrick Long <me@kerricklong.com>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ratatui_ruby"
version = "0.3.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
magnus = "0.8.2"
ratatui = { version = "0.30", features = ["widget-calendar", "layout-cache"] }

bumpalo = "3.16"
lazy_static = "1.4"
time = { version = "0.3", features = ["macros"] }
